# we-workshop-manager

./: .eslintrc.cjs  .gitignore  LICENSE  README.en.md  README.md  README.ru.md  app.py  index.html  main.py  package-lock.json  package.json  requirements.txt  tailwind.config.ts  vite.config.ts
bootstrap/: context.py  single_instance.py  startup.py
core/: __init__.py  accounts.py  config_manager.py  download_manager.py  image_cache.py  resources.py  wallpaper_engine.py  workshop_filters.py  workshop_parser.py
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.pt.md  README.zh.md
localization/: __init__.py  de.json  en.json  es.json  fr.json  ja.json  pt.json  ru.json  translator.py  zh.json
resources/: __init__.py  icons.py  images.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/: en.json  ru.json
src-tauri/src/: app_state.rs  constants.rs  lib.rs  plugin_paths.rs
src-tauri/src/accounts/: mod.rs  user_accounts.rs
src-tauri/src/commands/: accounts.rs  app.rs  config.rs  download.rs  extract.rs  i18n.rs  image.rs  metadata.rs  mod.rs  steam.rs  translator.rs  updater.rs  we.rs  workshop.rs
src-tauri/src/config/: metadata.rs  mod.rs  settings.rs
src-tauri/src/download/: mod.rs
src-tauri/src/extract/: mod.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/metadata/: mod.rs
src-tauri/src/translator/: mod.rs
src-tauri/src/updater/: mod.rs
src-tauri/src/we_client/: mod.rs
src-tauri/src/workshop/: debug.rs  mod.rs  parser.rs  url_builder.rs  webview.rs
(+140 files in other folders)
